added form and search bar including location , calender , rooms availability

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import 'tailwindcss';
+
+@custom-variant dark (&:is(.dark *));
 @plugin "tailwindcss-animate";
 
 :root {
@@ -31,7 +33,6 @@
   --chart-4: hsl(43 74% 66%);
   --chart-5: hsl(27 87% 67%);
 }
-
 
 @theme inline {
   /* Colors */
@@ -95,3 +96,17 @@ body {
   }
 }
 
+button,
+a,
+[role='button'] {
+  @apply select-none cursor-pointer;
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
